multiple tweaks: Restyled the edit and delete navigation options in works blurb, just to try out. This *definitely* still needs work. Also made series-meta a class and combined it with work-meta to give consistent styling. Added the class of own to works and bookmarks owned by the user, and gave those modules a slight grey and a border. Fixed the bad spacing in dl.tags, I hope. Removed all font sizing from the login box to resolve Firefox 2 font issues. Validated the XHTML of the works_blurb; added in missing quotes in works_helper is all. Plus other totally minor css tweaks. Still have not actually located the display bug in series-show. Woe.

--- a/public/stylesheets/forms.css
+++ b/public/stylesheets/forms.css
@@ -9,12 +9,12 @@ form .submit input {background:url(../images/ccc-fff.png) top left repeat-x #fff
 
 /* SIGN IN BOX */
 #signin p { display:inline;}
-#signin p.footnote	{ font-size:0.5625em;  padding:0.125em 0 0 .125em;}
+#signin p.footnote	{ font-size:smaller;  padding:0.125em 0 0 .125em;}
 #signin input#remember_me	{ margin:0.125em 0.125em 0.125em 0; vertical-align:middle; }
 img#openid	{ margin-left:-20px; vertical-align:middle; }
 
 /* sign in box when present in #header #login-block */
-#header #signin { font-size:0.625em; text-align:right;}
+#header #signin { text-align:right;}
 #header #signin form { background: url(../images/header-red.png) bottom left repeat-x #777; margin:-1.5em -0.25em 1em;padding:0.25em; border:1px groove #500000}
 #header input { background:url(../images/ccc-fff.png) top left repeat-x #fff; border:1px groove; }
 #header input:hover { background:#ddd; }
