--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -21,7 +21,6 @@ padding-left: 1.5em;
 }
 
 .home #signin {
-font-size: 0.625em;
 text-align: right;
 }
 .home #signin form {
