--- a/public/stylesheets/story-views.css
+++ b/public/stylesheets/story-views.css
@@ -61,11 +61,8 @@ dl.work-meta { background:#eee; padding:0.25em; position:relative;margin-top:0; 
 .preface blockquote.summary h3, .preface blockquote.notes h3 {color:#222; background:transparent; border-bottom:1px solid;}
 
 /* SERIES */
+dl.series-meta dd { margin:-1.286em 0 1em 12em !important; text-indent:0; padding:0;}}
 #series-and-view-data	{ clear:both}
-dl#series-meta	{ position:relative; }
-#series-meta dt	{ float:left; clear:left; width:10em; margin:0 1em 0 0; }
-#series-meta dd	{ clear:right; }
-#series-meta dd p, .series-show ul	{ clear:both; }
 .series-show ul li	{ display:inline; padding-right:0.5625em}
 .series-show ul#series-work-list li	{ display:block; padding:0; }
 
